Page Updates, Team, Home and Sponsor Page Populated

--- a/TEMPLATEDONOTEDIT.html
+++ b/TEMPLATEDONOTEDIT.html
@@ -39,8 +39,7 @@
 
 <main>
    <div class="content-section">
-    <h1>News</h1>
-    <p></p>
+    <h1>TEMPLATE DO NOT EDIT </h1>
     
   </div>
 </main>
