--- a/project.html
+++ b/project.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Swansea FS Homepage</title>
     <link rel="stylesheet" href="style.css">
-</head>
-<header>
+    <header>
   <div class="logo">
     <a href="index.html">
       <img src="images/SwanseaLogo.png" alt="Swansea FS Logo">
@@ -21,14 +20,34 @@
     <a href="news.html" class="nav-button">News</a>
     <a href="sponsors.html" class="nav-button">Sponsors</a>
     <a href="https://www.swansea.ac.uk/" class="nav-button">The University</a>
-
   </nav>
+
+
 </header>
+</head>
+
+
 <body>
-  <main>
-    <h2>Project</h2>
-    <p>Car</p>
-  </main>
+    <div class="header-sponsors">
+      <div class="sponsors-logos">
+        <div class="sponsor-logo">
+          <img src="images/EC OriginalBW.png" alt="Sponsor 1" class="bw">
+          <a href="https://www.easycomposites.co.uk/"><img src="images/EC Original.png" alt="EasyComposites" class="colorimage"></a>
+        </div>
+      </div>
+    </div>
+
+<main>
+   <div class="content-section">
+    <h1>Project</h1>
+    <p>Car Blurb</p>
+    <br>
+    <h2>The Chassis</h2>
+    <p>The chassis is the main support structure of the car, to which all other components are attached. It is designed to be lightweight yet strong, providing the necessary rigidity to withstand the forces experienced during racing.</p>
+    
+  </div>
+</main>
+
 
   <footer class="footer">
     <div class="footer-column">
@@ -76,6 +95,7 @@
         </p>
     </div>
   </footer>
+
 </body>
 
 </html>
