--- a/team.html
+++ b/team.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Swansea FS Homepage</title>
     <link rel="stylesheet" href="style.css">
-</head>
-<header>
+    <header>
   <div class="logo">
     <a href="index.html">
       <img src="images/SwanseaLogo.png" alt="Swansea FS Logo">
@@ -21,14 +20,73 @@
     <a href="news.html" class="nav-button">News</a>
     <a href="sponsors.html" class="nav-button">Sponsors</a>
     <a href="https://www.swansea.ac.uk/" class="nav-button">The University</a>
-
   </nav>
+
+
 </header>
+</head>
+
+
 <body>
-  <main>
-    <h2>Team</h2>
-    <p>Mugshots</p>
-  </main>
+    <div class="header-sponsors">
+      <div class="sponsors-logos">
+        <div class="sponsor-logo">
+          <img src="images/EC OriginalBW.png" alt="Sponsor 1" class="bw">
+          <a href="https://www.easycomposites.co.uk/"><img src="images/EC Original.png" alt="EasyComposites" class="colorimage"></a>
+        </div>
+      </div>
+    </div>
+
+<main>
+   <div class="content-section">
+    <h1>Team</h1>
+    <h2>Team Managers</h2>
+    <div class="team-container">
+      <div class="team-member">
+        <img src="images/placeholders/rodrigo.jpg" alt="Member 1">
+        <div class="team-info">
+          <h3>Tom Fellows</h3>
+          <h4>Team Principal</h4>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla id purus nec enim.</p>
+        </div>
+      </div>
+
+
+    </div>
+    <h2>Software team</h2>
+    <div class="team-container">
+            <div class="team-member">
+        <img src="images/placeholders/harry.jpg" alt="Member 3">
+        <div class="team-info">
+          <h3>Ethan Maya</h3>
+          <h4>Software Principal</h4>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla id purus nec enim.</p>
+        </div>
+      </div>
+      <div class="team-member">
+        <img src="images/placeholders/josh.jpg" alt="Member 2">
+        <div class="team-info">
+          <h3>Charlie Hall</h3>
+          <h4>Software Engineer</h4>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla id purus nec enim.</p>
+        </div>
+      </div>
+
+
+            <div class="team-member">
+        <img src="images/placeholders/sess.jpg" alt="Member 3">
+        <div class="team-info">
+          <h3>Another Person</h3>
+          <h4>Software Engineer</h4>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla id purus nec enim.</p>
+        </div>
+      </div>
+    </div>
+
+    
+  </div>
+</main>
+
 
   <footer class="footer">
     <div class="footer-column">
@@ -76,6 +134,7 @@
         </p>
     </div>
   </footer>
+
 </body>
 
 </html>
