--- a/cars.html
+++ b/cars.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Swansea FS Homepage</title>
     <link rel="stylesheet" href="style.css">
-</head>
-<header>
+    <header>
   <div class="logo">
     <a href="index.html">
       <img src="images/SwanseaLogo.png" alt="Swansea FS Logo">
@@ -21,14 +20,31 @@
     <a href="news.html" class="nav-button">News</a>
     <a href="sponsors.html" class="nav-button">Sponsors</a>
     <a href="https://www.swansea.ac.uk/" class="nav-button">The University</a>
-
   </nav>
+
+
 </header>
+</head>
+
+
 <body>
-  <main>
-    <h2>Cars</h2>
-    <p>Old Stuff</p>
-  </main>
+    <div class="header-sponsors">
+      <div class="sponsors-logos">
+        <div class="sponsor-logo">
+          <img src="images/EC OriginalBW.png" alt="Sponsor 1" class="bw">
+          <a href="https://www.easycomposites.co.uk/"><img src="images/EC Original.png" alt="EasyComposites" class="colorimage"></a>
+        </div>
+      </div>
+    </div>
+
+<main>
+   <div class="content-section">
+    <h1>Cars</h1>
+    <p></p>
+    
+  </div>
+</main>
+
 
   <footer class="footer">
     <div class="footer-column">
@@ -76,6 +92,7 @@
         </p>
     </div>
   </footer>
+
 </body>
 
 </html>
