--- a/sponsors.html
+++ b/sponsors.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Swansea FS Homepage</title>
     <link rel="stylesheet" href="style.css">
-</head>
-<header>
+    <header>
   <div class="logo">
     <a href="index.html">
       <img src="images/SwanseaLogo.png" alt="Swansea FS Logo">
@@ -21,14 +20,43 @@
     <a href="news.html" class="nav-button">News</a>
     <a href="sponsors.html" class="nav-button">Sponsors</a>
     <a href="https://www.swansea.ac.uk/" class="nav-button">The University</a>
-
   </nav>
+
+
 </header>
+</head>
+
+
 <body>
-  <main>
-    <h2>Sponsors</h2>
-    <p>Pay Us</p>
-  </main>
+    <div class="header-sponsors">
+      <div class="sponsors-logos">
+        <div class="sponsor-logo">
+          <img src="images/EC OriginalBW.png" alt="Sponsor 1" class="bw">
+          <a href="https://www.easycomposites.co.uk/"><img src="images/EC Original.png" alt="EasyComposites" class="colorimage"></a>
+        </div>
+      </div>
+    </div>
+
+<main>
+   <div class="content-section">
+    <h1>Our Sponsors</h1>
+    <section class="sponsors-section">
+  <div class="sponsor-card">
+    <img src="images/EC Original-NT.png" alt="Easy Composites Logo" class="sponsor-img">
+    <h2>Easy Composites</h2>
+    <h3>OFFICIAL TEAM PARTNER</h3>
+    <p>Easy Composites is a leading supplier of composite materials and manufacturing equipment, dedicated to providing high-quality products and exceptional customer service. They are proud to support our team with their innovative solutions. <br> <br> Thank you so much for sponsoring our team.</p>
+    <a href="https://www.easycomposites.co.uk/" class="discover-btn">DISCOVER</a>
+  </div>
+  <div class="sponsor-card">
+  </div>
+
+  <div class="sponsor-card">
+  </div>
+</section>
+  </div>
+</main>
+
 
   <footer class="footer">
     <div class="footer-column">
@@ -76,6 +104,7 @@
         </p>
     </div>
   </footer>
+
 </body>
 
 </html>
