Images Imported, Sponsor and Team Pages Changes, Sponsor Header Updated

--- a/cars.html
+++ b/cars.html
@@ -28,15 +28,42 @@
 
 
 <body>
-    <div class="header-sponsors">
-      <div class="sponsors-logos">
-        <div class="sponsor-logo">
-          <img src="images/EC OriginalBW.png" alt="Sponsor 1" class="bw">
-          <a href="https://www.easycomposites.co.uk/"><img src="images/EC Original.png" alt="EasyComposites" class="colorimage"></a>
-        </div>
-      </div>
+<div class="header-sponsors">
+  <div class="sponsors-logos">
+    <div class="sponsor-logo">
+      <img src="images/EC OriginalBW.png" alt="Sponsor 1" class="bw">
+      <a href="https://www.easycomposites.co.uk/">
+        <img src="images/EC Original.png" alt="EasyComposites" class="colorimage">
+      </a>
     </div>
 
+    <div class="sponsor-logo">
+      <img src="images/ltcdarkbw.png" alt="Sponsor 1" class="bw">
+      <a href="https://tuning.wales/">
+        <img src="images/ltcdark.png" alt="EasyComposites" class="colorimage">
+      </a>
+    </div>
+                <div class="sponsor-logo">
+      <img src="images/vita-logo-removebg-previewbw.png" alt="Sponsor 1" class="bw">
+      <a href="https://www.thevitagroup.com/">
+        <img src="images/vita-logo-removebg-preview.png" alt="EasyComposites" class="colorimage">
+      </a>
+    </div>
+        <div class="sponsor-logo">
+      <img src="images/DTAfast-logo-For-Black-BackSTROKE_c7a78a8e-de6f-48d5-bdb7-2d162b38976a-removebg-previewbw.png" alt="Sponsor 1" class="bw">
+      <a href="https://dtafast.co.uk/">
+        <img src="images/DTAfast-logo-For-Black-BackSTROKE_c7a78a8e-de6f-48d5-bdb7-2d162b38976a-removebg-preview.png" alt="EasyComposites" class="colorimage">
+      </a>
+    </div>
+            <div class="sponsor-logo">
+      <img src="images/Full-Colour-on-Black-removebg-previewbw.png" alt="Sponsor 1" class="bw">
+      <a href="https://proformancemetals.co.uk/">
+        <img src="images/Full-Colour-on-Black-removebg-preview.png" alt="EasyComposites" class="colorimage">
+      </a>
+    </div>
+
+  </div>
+</div>
 <main>
    <div class="content-section">
     <h1>Cars</h1>
