--- a/sponsors.html
+++ b/sponsors.html
@@ -28,30 +28,102 @@
 
 
 <body>
-    <div class="header-sponsors">
-      <div class="sponsors-logos">
-        <div class="sponsor-logo">
-          <img src="images/EC OriginalBW.png" alt="Sponsor 1" class="bw">
-          <a href="https://www.easycomposites.co.uk/"><img src="images/EC Original.png" alt="EasyComposites" class="colorimage"></a>
-        </div>
-      </div>
+<div class="header-sponsors">
+  <div class="sponsors-logos">
+    <div class="sponsor-logo">
+      <img src="images/EC OriginalBW.png" alt="Sponsor 1" class="bw">
+      <a href="https://www.easycomposites.co.uk/">
+        <img src="images/EC Original.png" alt="EasyComposites" class="colorimage">
+      </a>
     </div>
+
+    <div class="sponsor-logo">
+      <img src="images/ltcdarkbw.png" alt="Sponsor 1" class="bw">
+      <a href="https://tuning.wales/">
+        <img src="images/ltcdark.png" alt="EasyComposites" class="colorimage">
+      </a>
+    </div>
+                <div class="sponsor-logo">
+      <img src="images/vita-logo-removebg-previewbw.png" alt="Sponsor 1" class="bw">
+      <a href="https://www.thevitagroup.com/">
+        <img src="images/vita-logo-removebg-preview.png" alt="EasyComposites" class="colorimage">
+      </a>
+    </div>
+        <div class="sponsor-logo">
+      <img src="images/DTAfast-logo-For-Black-BackSTROKE_c7a78a8e-de6f-48d5-bdb7-2d162b38976a-removebg-previewbw.png" alt="Sponsor 1" class="bw">
+      <a href="https://dtafast.co.uk/">
+        <img src="images/DTAfast-logo-For-Black-BackSTROKE_c7a78a8e-de6f-48d5-bdb7-2d162b38976a-removebg-preview.png" alt="EasyComposites" class="colorimage">
+      </a>
+    </div>
+            <div class="sponsor-logo">
+      <img src="images/Full-Colour-on-Black-removebg-previewbw.png" alt="Sponsor 1" class="bw">
+      <a href="https://proformancemetals.co.uk/">
+        <img src="images/Full-Colour-on-Black-removebg-preview.png" alt="EasyComposites" class="colorimage">
+      </a>
+    </div>
+
+  </div>
+</div>
 
 <main>
    <div class="content-section">
     <h1>Our Sponsors</h1>
     <section class="sponsors-section">
-  <div class="sponsor-card">
+<div class="sponsor-card">
+  <div class="sponsor-img-wrapper">
     <img src="images/EC Original-NT.png" alt="Easy Composites Logo" class="sponsor-img">
+  </div>
     <h2>Easy Composites</h2>
     <h3>OFFICIAL TEAM PARTNER</h3>
-    <p>Easy Composites is a leading supplier of composite materials and manufacturing equipment, dedicated to providing high-quality products and exceptional customer service. They are proud to support our team with their innovative solutions. <br> <br> Thank you so much for sponsoring our team.</p>
+    <p>Easy Composites is a leading supplier of composite materials and manufacturing equipment, dedicated to providing high-quality products and exceptional customer service. They are proud to support our team with their innovative solutions. <br> <br> Thank you so much for partnering with our team.</p>
     <a href="https://www.easycomposites.co.uk/" class="discover-btn">DISCOVER</a>
   </div>
-  <div class="sponsor-card">
+<div class="sponsor-card">
+  <div class="sponsor-img-wrapper">
+<img src="images/llandsmall.png" alt="Llandow Tuning Logo" class="sponsor-img">
+          </div>
+    <h2>Llandow Tuning</h2>
+    <h3>OFFICIAL TEAM PARTNER</h3>
+    <p>Llandow Tuning is a premier automotive tuning company specializing in performance enhancements and custom modifications. They are dedicated to delivering top-notch services and products to their clients. <br> <br> Thank you so much for partnering with our team.</p>
+    <a href="https://tuning.wales/" class="discover-btn">DISCOVER</a>
   </div>
 
-  <div class="sponsor-card">
+<div class="sponsor-card">
+  <div class="sponsor-img-wrapper">
+<img src="images/vitasmall.png" alt="The Vita Group Logo" class="sponsor-img">
+          </div>
+    <h2>The Vita Group</h2>
+    <h3>OFFICIAL TEAM PARTNER</h3>
+    <p>The Vita Group is a leading provider of innovative foam solutions, specializing in the design and manufacture of high-performance materials for various industries. They are committed to supporting our team with their cutting-edge products. <br> <br> Thank you so much for partnering with our team.</p>
+    <a href="https://www.thevitagroup.com/" class="discover-btn">DISCOVER</a>
+  </div>
+</section>
+<section class="sponsors-section">
+<div class="sponsor-card">
+  <div class="sponsor-img-wrapper">
+<img src="images/DTAfast-logo-For-Black-BackSTROKE_c7a78a8e-de6f-48d5-bdb7-2d162b38976a-removebg-preview.png" alt="DTAfast Logo" class="sponsor-img">
+          </div>
+    <h2>DTAfast</h2>
+    <h3>OFFICIAL TEAM PARTNER</h3>
+    <p>DTAfast is a leading provider of automotive tuning solutions, specializing in high-performance engine management systems. They are dedicated to supporting our team with their innovative products. <br> <br> Thank you so much for partnering with our team.</p>
+    <a href="https://dtafast.co.uk/" class="discover-btn">DISCOVER</a>
+  </div>
+<div class="sponsor-card">
+  <div class="sponsor-img-wrapper">
+<img src="images/Full-Colour-on-Black-removebg-preview.png" alt="Proformance Metals Logo" class="sponsor-img">
+          </div>
+    <h2>Proformance Metals</h2>
+    <h3>OFFICIAL TEAM PARTNER</h3>
+    <p>Proformance Metals is a leading provider of high-quality metal products and services, specializing in custom solutions for various industries. They are committed to supporting our team with their exceptional offerings. <br> <br> Thank you so much for partnering with our team.</p>
+    <a href="https://www.proformancemetals.co.uk/" class="discover-btn">DISCOVER</a>
+  </div>
+<div class="sponsor-card">
+  <div class="sponsor-img-wrapper">
+
+    <h2></h2>
+    <h3></h3>
+    <p></p>
+
   </div>
 </section>
   </div>
