--- a/team.html
+++ b/team.html
@@ -28,59 +28,223 @@
 
 
 <body>
-    <div class="header-sponsors">
-      <div class="sponsors-logos">
-        <div class="sponsor-logo">
-          <img src="images/EC OriginalBW.png" alt="Sponsor 1" class="bw">
-          <a href="https://www.easycomposites.co.uk/"><img src="images/EC Original.png" alt="EasyComposites" class="colorimage"></a>
-        </div>
-      </div>
+<div class="header-sponsors">
+  <div class="sponsors-logos">
+    <div class="sponsor-logo">
+      <img src="images/EC OriginalBW.png" alt="Sponsor 1" class="bw">
+      <a href="https://www.easycomposites.co.uk/">
+        <img src="images/EC Original.png" alt="EasyComposites" class="colorimage">
+      </a>
     </div>
+
+    <div class="sponsor-logo">
+      <img src="images/ltcdarkbw.png" alt="Sponsor 1" class="bw">
+      <a href="https://tuning.wales/">
+        <img src="images/ltcdark.png" alt="EasyComposites" class="colorimage">
+      </a>
+    </div>
+                <div class="sponsor-logo">
+      <img src="images/vita-logo-removebg-previewbw.png" alt="Sponsor 1" class="bw">
+      <a href="https://www.thevitagroup.com/">
+        <img src="images/vita-logo-removebg-preview.png" alt="EasyComposites" class="colorimage">
+      </a>
+    </div>
+        <div class="sponsor-logo">
+      <img src="images/DTAfast-logo-For-Black-BackSTROKE_c7a78a8e-de6f-48d5-bdb7-2d162b38976a-removebg-previewbw.png" alt="Sponsor 1" class="bw">
+      <a href="https://dtafast.co.uk/">
+        <img src="images/DTAfast-logo-For-Black-BackSTROKE_c7a78a8e-de6f-48d5-bdb7-2d162b38976a-removebg-preview.png" alt="EasyComposites" class="colorimage">
+      </a>
+    </div>
+            <div class="sponsor-logo">
+      <img src="images/Full-Colour-on-Black-removebg-previewbw.png" alt="Sponsor 1" class="bw">
+      <a href="https://proformancemetals.co.uk/">
+        <img src="images/Full-Colour-on-Black-removebg-preview.png" alt="EasyComposites" class="colorimage">
+      </a>
+    </div>
+
+  </div>
+</div>
 
 <main>
    <div class="content-section">
     <h1>Team</h1>
-    <h2>Team Managers</h2>
+    <h2>Team Directors</h2>
     <div class="team-container">
       <div class="team-member">
-        <img src="images/placeholders/rodrigo.jpg" alt="Member 1">
+        <img src="images/headshots/cropped/ZoeWCropped-removebg-preview.png" onerror="this.onerror=null; this.src='images/placeholder.png';" alt="Zoe Wakefield">
         <div class="team-info">
-          <h3>Tom Fellows</h3>
+          <h3>Zoe Wakefield</h3>
           <h4>Team Principal</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla id purus nec enim.</p>
+          <p><b>University Course:</b># <br><b>Favourite F1 Team:</b><br><b>Year of FS:</b>#</p>
         </div>
       </div>
+            <div class="team-member">
+       <img src="#" onerror="this.onerror=null; this.src='images/placeholder.png';" alt="Warwick Daden">
 
-
+        <div class="team-info">
+          <h3>Warwick Daden</h3>
+          <h4>Technical Director</h4>
+          <p><b>University Course:</b># <br><b>Favourite F1 Team:</b><br><b>Year of FS:</b>#</p>
+        </div>
+      </div>
+                  <div class="team-member">
+        <div class="team-info">
+          <h3></h3>
+          <h4></h4>
+          <p></p>
+        </div>
+      </div>
     </div>
-    <h2>Software team</h2>
+    <h2>Community & Welfare</h2>
+        <div class="team-container">
+      <div class="team-member">
+        <img src="images/headshots/cropped/LilyGCropped-removebg-preview.png" onerror="this.onerror=null; this.src='images/placeholder.png';" alt="Lily Gannon">
+        <div class="team-info">
+          <h3>Lily Gannon</h3>
+          <h4>First Year & Welfare Rep</h4>
+          <p><b>University Course:</b># <br><b>Favourite F1 Team:</b><br><b>Year of FS:</b>#</p>
+        </div>
+      </div>
+            <div class="team-member">
+       <img src="images/headshots/cropped/LenNCropped-removebg-preview.png" onerror="this.onerror=null; this.src='images/placeholder.png';" alt="Len Noel">
+
+        <div class="team-info">
+          <h3>Len Noel</h3>
+          <h4>Social Secretary</h4>
+          <p><b>University Course:</b>2nd Year Mechanical Engineering <br><b>Favourite F1 Team:</b><br><b>Year of FS:</b>2</p>
+        </div>
+      </div>
+                  <div class="team-member">
+        <div class="team-info">
+          <h3></h3>
+          <h4></h4>
+          <p></p>
+        </div>
+      </div>
+    </div>
+    <h2>Heads of Departments</h2>
+        <div class="team-container">
+            <div class="team-member">
+        <img src="images/headshots/cropped/JamesBCropped-removebg-preview.png" onerror="this.onerror=null; this.src='images/placeholder.png';" alt="James Barnes">
+        <div class="team-info">
+          <h3>James Barnes</h3>
+          <h4>Head of Manufacturing</h4>
+          <p><b>University Course:</b>2nd Year Mechanical Engineering <br><b>Favourite F1 Team:</b><br><b>Year of FS:</b>2 </p>
+        </div>
+      </div>
+      <div class="team-member">
+        <img src="images/headshots/cropped/TomFCropped-removebg-preview.png" onerror="this.onerror=null; this.src='images/placeholder.png';" alt="Tom Fellows">
+        <div class="team-info">
+          <h3>Tom Fellows</h3>
+          <h4>Head of Design</h4>
+          <p><b>University Course:</b># <br><b>Favourite F1 Team:</b><br><b>Year of FS:</b>#</p>
+        </div>
+      </div>
+            <div class="team-member">
+        <img src="images/headshots/cropped/ArthurMCropped-removebg-preview.png" onerror="this.onerror=null; this.src='images/placeholder.png';" alt="Arthur Moucheron">
+        <div class="team-info">
+          <h3>Arthur Moucheron</h3>
+          <h4>Head of Business</h4>
+          <p><b>University Course:</b># <br><b>Favourite F1 Team:</b><br><b>Year of FS:</b>#</p>
+        </div>
+      </div>
+                  <div class="team-member">
+        <img src="images/headshots/cropped/JonothanOCropped-removebg-preview.png" onerror="this.onerror=null; this.src='images/placeholder.png';" alt="Jonathan Onions">
+        <div class="team-info">
+          <h3>Jonathan Onions</h3>
+          <h4>Head of Powertrain</h4>
+          <p><b>University Course:</b>2nd Year Mechanical Engineering <br><b>Favourite F1 Team: Williams</b><br><b>Year of FS:</b>2</p>
+        </div>
+      </div>
+                  <div class="team-member">
+        <img src="images/headshots/cropped/TomSCropped-removebg-preview.png" onerror="this.onerror=null; this.src='images/placeholder.png';" alt="Tom Streatfield">
+        <div class="team-info">
+          <h3>Tom Streatfield</h3>
+          <h4>Head of Chassis</h4>
+          <p><b>University Course:</b># <br><b>Favourite F1 Team:</b><br><b>Year of FS:</b>#</p>
+        </div>
+      </div>
+                  <div class="team-member">
+        <img src="images/headshots/cropped/KrystofKCropped-removebg-preview.png" onerror="this.onerror=null; this.src='images/placeholder.png';" alt="Krystof Kouba">
+        <div class="team-info">
+          <h3>Krystof Kouba</h3>
+          <h4>Head of Electrical</h4>
+          <p><b>University Course:</b># <br><b>Favourite F1 Team:</b><br><b>Year of FS:</b>#</p>
+        </div>
+      </div>
+                  <div class="team-member">
+        <img src="images/headshots/cropped/SudharshanBCropped-removebg-preview.png" onerror="this.onerror=null; this.src='images/placeholder.png';" alt="Sudharshan Bhattacharyya">
+        <div class="team-info">
+          <h3>Sudharshan Bhattacharyya</h3>
+          <h4>Co-Head of Aerodynamics</h4>
+          <p><b>University Course:</b># <br><b>Favourite F1 Team:</b><br><b>Year of FS:</b>#</p>
+        </div>
+      </div>
+                  <div class="team-member">
+        <img src="images/headshots/cropped/SidKCropped-removebg-preview.png" onerror="this.onerror=null; this.src='images/placeholder.png';" alt="Sid Khandekar">
+        <div class="team-info">
+          <h3>Sid Khandekar</h3>
+          <h4>Co-Head of Aerodynamics</h4>
+          <p><b>University Course:</b># <br><b>Favourite F1 Team:</b><br><b>Year of FS:</b>#</p>
+        </div>
+      </div>
+                  <div class="team-member">
+        <img src=# onerror="this.onerror=null; this.src='images/placeholder.png';" alt="Jack Young">
+        <div class="team-info">
+          <h3>Jack Young</h3>
+          <h4>Co-Head of Suspension</h4>
+          <p><b>University Course:</b># <br><b>Favourite F1 Team:</b><br><b>Year of FS:</b>#</p>
+        </div>
+      </div>
+                        <div class="team-member">
+        <img src=# onerror="this.onerror=null; this.src='images/placeholder.png';" alt="Josh Roberts">
+        <div class="team-info">
+          <h3>Josh Roberts</h3>
+          <h4>Co-Head of Suspension</h4>
+          <p><b>University Course:</b># <br><b>Favourite F1 Team:</b><br><b>Year of FS:</b>#</p>
+        </div>
+      </div>
+                  <div class="team-member">
+        <div class="team-info">
+          <h3></h3>
+          <h4></h4>
+          <p></p>
+        </div>
+      </div>
+                  <div class="team-member">
+        <div class="team-info">
+          <h3></h3>
+          <h4></h4>
+          <p></p>
+        </div>
+      </div>
+    </div>
+        <h2>Software team</h2>
     <div class="team-container">
             <div class="team-member">
-        <img src="images/placeholders/harry.jpg" alt="Member 3">
+        <img src="#" onerror="this.onerror=null; this.src='images/placeholder.png';" alt="Warwick Daden">
         <div class="team-info">
           <h3>Ethan Maya</h3>
           <h4>Software Principal</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla id purus nec enim.</p>
+          <p><b>University Course:</b># <br><b>Favourite F1 Team:</b><br><b>Year of FS:</b>#</p>
         </div>
       </div>
       <div class="team-member">
-        <img src="images/placeholders/josh.jpg" alt="Member 2">
+        <img src="#" onerror="this.onerror=null; this.src='images/placeholder.png';" alt="Warwick Daden">
         <div class="team-info">
           <h3>Charlie Hall</h3>
           <h4>Software Engineer</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla id purus nec enim.</p>
+          <p><b>University Course:</b>2nd Year Mechanical Engineering <br><b>Favourite F1 Team:</b>Haas<br><b>Year of FS:</b>1</p>
         </div>
       </div>
-
-
             <div class="team-member">
-        <img src="images/placeholders/sess.jpg" alt="Member 3">
         <div class="team-info">
-          <h3>Another Person</h3>
-          <h4>Software Engineer</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla id purus nec enim.</p>
+          <h3></h3>
+          <h4></h4>
+          <p></p>
         </div>
       </div>
+      
     </div>
 
     
