Team Role Changes

--- a/team.html
+++ b/team.html
@@ -233,7 +233,7 @@
         <img src="#" onerror="this.onerror=null; this.src='images/placeholder.png';" alt="Warwick Daden">
         <div class="team-info">
           <h3>Charlie Hall</h3>
-          <h4>Software Engineer</h4>
+          <h4>Software Engineer & Website Designer</h4>
           <p><b>University Course:</b>2nd Year Mechanical Engineering <br><b>Favourite F1 Team:</b>Haas<br><b>Year of FS:</b>1</p>
         </div>
       </div>
