--- a/team.html
+++ b/team.html
@@ -219,14 +219,14 @@
         </div>
       </div>
     </div>
-        <h2>Software team</h2>
+        <h2>Software Team</h2>
     <div class="team-container">
             <div class="team-member">
         <img src="#" onerror="this.onerror=null; this.src='images/placeholder.png';" alt="Warwick Daden">
         <div class="team-info">
           <h3>Ethan Maya</h3>
           <h4>Software Principal</h4>
-          <p><b>University Course:</b># <br><b>Favourite F1 Team:</b><br><b>Year of FS:</b>#</p>
+          <p><b>University Course:</b>2nd Year Computer Science and AI <br><b>Favourite F1 Team:</b>Red Bull<br><b>Year of FS:</b>2</p>
         </div>
       </div>
       <div class="team-member">
