--- a/contact.html
+++ b/contact.html
@@ -11,6 +11,8 @@
       <img src="images/SwanseaLogo.png" alt="Swansea FS Logo">
     </a>
   </div>
+  <link rel="icon" type="image/x-icon" href="images/">
+  <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico">
   <a href="contact.html" class="contact-btn">Contact Us</a>
   <nav class="nav">
     <a href="index.html" class="nav-button">Home</a>
