Team Page Updates & New Sponsors

--- a/index.html
+++ b/index.html
@@ -56,6 +56,12 @@
       </a>
     </div>
             <div class="sponsor-logo">
+      <img src="images/kestralbw.png" alt="Sponsor 1" class="bw">
+      <a href="https://proformancemetals.co.uk/">
+        <img src="images/kestralcolor.png" alt="EasyComposites" class="colorimage">
+      </a>
+    </div>
+                <div class="sponsor-logo">
       <img src="images/Full-Colour-on-Black-removebg-previewbw.png" alt="Sponsor 1" class="bw">
       <a href="https://proformancemetals.co.uk/">
         <img src="images/Full-Colour-on-Black-removebg-preview.png" alt="EasyComposites" class="colorimage">
