--- a/team.html
+++ b/team.html
@@ -75,7 +75,7 @@
         <div class="team-info">
           <h3>Zoe Wakefield</h3>
           <h4>Team Principal</h4>
-          <p><b>University Course:</b># <br><b>Favourite F1 Team:</b><br><b>Year of FS:</b>#</p>
+          <p><b>University Course:</b>3rd Year Mechanical Engineering <br><b>Favourite F1 Team:</b>Haas<br><b>Year of FS:</b>2</p>
         </div>
       </div>
             <div class="team-member">
@@ -84,7 +84,7 @@
         <div class="team-info">
           <h3>Warwick Daden</h3>
           <h4>Technical Director</h4>
-          <p><b>University Course:</b># <br><b>Favourite F1 Team:</b><br><b>Year of FS:</b>#</p>
+          <p><b>University Course:</b>3rd Year Materials Engineering <br><b>Favourite F1 Team:</b>Red Bull<br><b>Year of FS:</b>3</p>
         </div>
       </div>
                   <div class="team-member">
@@ -102,7 +102,7 @@
         <div class="team-info">
           <h3>Lily Gannon</h3>
           <h4>First Year & Welfare Rep</h4>
-          <p><b>University Course:</b># <br><b>Favourite F1 Team:</b><br><b>Year of FS:</b>#</p>
+          <p><b>University Course:</b>2nd Year Mechanical Engineering <br><b>Favourite F1 Team:</b>Ferrari<br><b>Year of FS:</b>2</p>
         </div>
       </div>
             <div class="team-member">
@@ -111,7 +111,7 @@
         <div class="team-info">
           <h3>Len Noel</h3>
           <h4>Social Secretary</h4>
-          <p><b>University Course:</b>2nd Year Mechanical Engineering <br><b>Favourite F1 Team:</b><br><b>Year of FS:</b>2</p>
+          <p><b>University Course:</b>2nd Year Mechanical Engineering <br><b>Favourite F1 Team:</b>Mercedes<br><b>Year of FS:</b>2</p>
         </div>
       </div>
                   <div class="team-member">
@@ -129,7 +129,7 @@
         <div class="team-info">
           <h3>James Barnes</h3>
           <h4>Head of Manufacturing</h4>
-          <p><b>University Course:</b>2nd Year Mechanical Engineering <br><b>Favourite F1 Team:</b><br><b>Year of FS:</b>2 </p>
+          <p><b>University Course:</b>2nd Year Mechanical Engineering <br><b>Favourite F1 Team:</b>Red Bull<br><b>Year of FS:</b>2 </p>
         </div>
       </div>
       <div class="team-member">
@@ -137,7 +137,7 @@
         <div class="team-info">
           <h3>Tom Fellows</h3>
           <h4>Head of Design</h4>
-          <p><b>University Course:</b># <br><b>Favourite F1 Team:</b><br><b>Year of FS:</b>#</p>
+          <p><b>University Course:</b>3rd Year Mechanical Engineering <br><b>Favourite F1 Team:</b>Liam Lawson<br><b>Year of FS:</b>3</p>
         </div>
       </div>
             <div class="team-member">
@@ -145,7 +145,7 @@
         <div class="team-info">
           <h3>Arthur Moucheron</h3>
           <h4>Head of Business</h4>
-          <p><b>University Course:</b># <br><b>Favourite F1 Team:</b><br><b>Year of FS:</b>#</p>
+          <p><b>University Course:</b>3rd Year Mechanical Engineering <br><b>Favourite F1 Team:</b>Aston Martin<br><b>Year of FS:</b>2</p>
         </div>
       </div>
                   <div class="team-member">
@@ -153,7 +153,7 @@
         <div class="team-info">
           <h3>Jonathan Onions</h3>
           <h4>Head of Powertrain</h4>
-          <p><b>University Course:</b>2nd Year Mechanical Engineering <br><b>Favourite F1 Team: Williams</b><br><b>Year of FS:</b>2</p>
+          <p><b>University Course:</b>2nd Year Mechanical Engineering <br><b>Favourite F1 Team: </b>Williams<br><b>Year of FS:</b>2</p>
         </div>
       </div>
                   <div class="team-member">
@@ -161,7 +161,7 @@
         <div class="team-info">
           <h3>Tom Streatfield</h3>
           <h4>Head of Chassis</h4>
-          <p><b>University Course:</b># <br><b>Favourite F1 Team:</b><br><b>Year of FS:</b>#</p>
+          <p><b>University Course:</b>2nd Year Mechanical Engineering <br><b>Favourite F1 Team:</b>Williams<br><b>Year of FS:</b>3</p>
         </div>
       </div>
                   <div class="team-member">
@@ -169,7 +169,7 @@
         <div class="team-info">
           <h3>Krystof Kouba</h3>
           <h4>Head of Electrical</h4>
-          <p><b>University Course:</b># <br><b>Favourite F1 Team:</b><br><b>Year of FS:</b>#</p>
+          <p><b>University Course:</b>Electrical & Electronics Engineering <br><b>Favourite F1 Team:</b>McLaren<br><b>Year of FS:</b>3</p>
         </div>
       </div>
                   <div class="team-member">
@@ -177,7 +177,7 @@
         <div class="team-info">
           <h3>Sudharshan Bhattacharyya</h3>
           <h4>Co-Head of Aerodynamics</h4>
-          <p><b>University Course:</b># <br><b>Favourite F1 Team:</b><br><b>Year of FS:</b>#</p>
+          <p><b>University Course:</b>3rd Year Mechanical Engineering <br><b>Favourite F1 Team:</b>Ferrari<br><b>Year of FS:</b>2</p>
         </div>
       </div>
                   <div class="team-member">
@@ -185,30 +185,31 @@
         <div class="team-info">
           <h3>Sid Khandekar</h3>
           <h4>Co-Head of Aerodynamics</h4>
-          <p><b>University Course:</b># <br><b>Favourite F1 Team:</b><br><b>Year of FS:</b>#</p>
+          <p><b>University Course:</b>2nd Year Mechanical Engineering <br><b>Favourite F1 Team:</b>Ferrari<br><b>Year of FS:</b>2</p>
         </div>
       </div>
                   <div class="team-member">
-        <img src=# onerror="this.onerror=null; this.src='images/placeholder.png';" alt="Jack Young">
+        <img src="images/headshots/cropped/JackYCropped-removebg-preview.png" onerror="this.onerror=null; this.src='images/placeholder.png';" alt="Jack Young">
         <div class="team-info">
           <h3>Jack Young</h3>
           <h4>Co-Head of Suspension</h4>
-          <p><b>University Course:</b># <br><b>Favourite F1 Team:</b><br><b>Year of FS:</b>#</p>
+          <p><b>University Course:</b>3rd Year Mechanical Engineering <br><b>Favourite F1 Team:</b>Red Bull<br><b>Year of FS:</b>1</p>
         </div>
       </div>
                         <div class="team-member">
-        <img src=# onerror="this.onerror=null; this.src='images/placeholder.png';" alt="Josh Roberts">
+        <img src="images/headshots/cropped/JoshRCropped-removebg-preview.png" onerror="this.onerror=null; this.src='images/placeholder.png';" alt="Josh Roberts">
         <div class="team-info">
           <h3>Josh Roberts</h3>
           <h4>Co-Head of Suspension</h4>
-          <p><b>University Course:</b># <br><b>Favourite F1 Team:</b><br><b>Year of FS:</b>#</p>
+          <p><b>University Course:</b>3rd Year Mechanical Engineering <br><b>Favourite F1 Team:</b>McLaren<br><b>Year of FS:</b>2</p>
         </div>
       </div>
                   <div class="team-member">
+            <img src=# onerror="this.onerror=null; this.src='images/placeholder.png';" alt="Josh Roberts">
         <div class="team-info">
-          <h3></h3>
-          <h4></h4>
-          <p></p>
+          <h3>Mohammed Alabsi</h3>
+          <h4>Head of Costing</h4>
+          <p><b>University Course:</b>2nd Year Mechanical Engineering <br><b>Favourite F1 Team:</b>Mercedes<br><b>Year of FS:</b>1</p>
         </div>
       </div>
                   <div class="team-member">
@@ -222,7 +223,7 @@
         <h2>Software team</h2>
     <div class="team-container">
             <div class="team-member">
-        <img src="#" onerror="this.onerror=null; this.src='images/placeholder.png';" alt="Warwick Daden">
+        <img src="images/headshots/cropped/EthanMCropped-removebg-preview.png" onerror="this.onerror=null; this.src='images/placeholder.png';" alt="Ethan Maya">
         <div class="team-info">
           <h3>Ethan Maya</h3>
           <h4>Software Principal</h4>
